--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "material-components-web": "14.0.0",
         "@openfonts/roboto_latin-ext": "1.44.1",
         "knockout": "3.5.1",
-        "moment": "2.29.4"
+        "moment": "2.29.4",
+        "front-matter": "4.0.2"
     }
 }
